Simplify README documentation